--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "build-css": "node-sass --include-path scss scss/main.scss public/css/styles.css",
-    "watch-css": "nodemon -e scss -x \"npm run build-css\""
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    "dev": "concurrently \"npm run start\" \"npm run watch-css\""
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "pug": "^2.0.4"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
 }
